--- a/client/main.html
+++ b/client/main.html
@@ -25,7 +25,7 @@
             <td>
               <input
                 type="text"
-                class="js-newride-field-name"
+                class="js-rideform-field-name"
                 placeholder="Name"
                 value="{{rideFormModel.name}}"
                 tabindex="1"/>
@@ -38,7 +38,7 @@
             <td>
               <input
                 type="text"
-                class="js-newride-field-phone"
+                class="js-rideform-field-phone"
                 placeholder="Phone"
                 value="{{rideFormModel.phone}}"
                 tabindex="2"/>
@@ -51,7 +51,7 @@
             <td>
               <input
                 type="text"
-                class="js-newride-field-datetime"
+                class="js-rideform-field-datetime"
                 placeholder="Date and time"
                 value="{{rideFormModel.datetime}}"
                 tabindex="3"/>
@@ -64,7 +64,7 @@
             <td>
               <input
                 type="text"
-                class="js-newride-field-from"
+                class="js-rideform-field-from"
                 placeholder="Address"
                 value="{{rideFormModel.from}}"
                 tabindex="4"/>
@@ -77,7 +77,7 @@
             <td>
               <input
                 type="text"
-                class="js-newride-field-to"
+                class="js-rideform-field-to"
                 placeholder="Airport"
                 value="{{rideFormModel.to}}"
                 tabindex="5"/>
@@ -86,7 +86,7 @@
           <tr>
             <td>
               {{#unless editing}}
-                <a href="#" class="js-newride-fake" tabindex="0">Fake one</a>
+                <a href="#" class="js-rideform-fake" tabindex="0">Fake one</a>
               {{/unless}}
             </td>
             <td style="text-align: right">
@@ -98,7 +98,7 @@
                 <button class="js-editride-save" tabindex="7">Save</button>
               {{else}}
                 <button
-                  class="js-newride-submit"
+                  class="js-rideform-submit"
                   tabindex="6">Submit</button>
               {{/if}}
             </td>
