new ride valign

--- a/client/main.html
+++ b/client/main.html
@@ -10,7 +10,7 @@
   <div class="container">
     <table>
     <tr>
-      <td>
+      <td valign="top">
         {{#if editing}}
           <h2>Editing ride #{{rideBeingEdited.bkn_ref}}</h2>
         {{else}}
