--- a/client/main.html
+++ b/client/main.html
@@ -10,7 +10,7 @@
   <div class="container">
     <table>
     <tr>
-      <td valign="top">
+      <td valign="top" style="padding: 20px">
         {{#if editing}}
           <h2>Editing ride #{{rideBeingEdited.bkn_ref}}</h2>
         {{else}}
@@ -105,7 +105,7 @@
           </tr>
         </table>
       </td>
-      <td>
+      <td style="padding: 20px">
         <!-- *********** -->
         <!-- Rides table -->
         <!-- *********** -->
