--- a/client/main.html
+++ b/client/main.html
@@ -124,7 +124,7 @@
           </thead>
           <tbody>
             {{#if isRidesEmpty}}
-              <span>No rides</span>
+              <span style="color: red">No rides</span>
             {{/if}}
             {{#each rides}}
                 <tr>
