--- a/client/main.html
+++ b/client/main.html
@@ -51,10 +51,11 @@
             <td>
               <input
                 type="text"
+                id="my-datepicker"
                 class="js-rideform-field-datetime"
                 placeholder="Date and time"
                 value="{{rideFormModel.datetime}}"
-                tabindex="3"/>
+                tabindex="3">
             </td>
           </tr>
           <tr>
