--- a/client/main.html
+++ b/client/main.html
@@ -130,7 +130,7 @@
             {{#each rides}}
                 <tr>
                   <td>{{bkn_ref}}</td>
-                  <td>{{name}} ({{ride.phone}})</td>
+                  <td>{{name}} ({{phone}})</td>
                   <td>{{datetime}}</td>
                   <td>{{from}}</td>
                   <td>{{to}}</td>
